[gd_scene load_steps=15 format=3 uid="uid://dup2jh8uleo3l"]

[ext_resource type="Script" uid="uid://dc7w7oe3lm0eu" path="res://scripts/player.gd" id="1_u2qrv"]
[ext_resource type="Script" uid="uid://cfgvniwyo5waf" path="res://addons/netfox/rollback/rollback-synchronizer.gd" id="2_ktqdq"]
[ext_resource type="PackedScene" uid="uid://bnpcdhkiv5rja" path="res://assets/characters/x_bot/x_bot.tscn" id="2_xfltk"]
[ext_resource type="Script" uid="uid://btck2pi5uy6xp" path="res://addons/netfox.extras/state-machine/rewindable-state-machine.gd" id="3_lo6j0"]
[ext_resource type="Script" uid="uid://cgycqse80cops" path="res://addons/netfox/tick-interpolator.gd" id="4_a47yd"]
[ext_resource type="PackedScene" uid="uid://l1d8hwvn7hbq" path="res://scenes/player/camera_input.tscn" id="4_g37aj"]
[ext_resource type="Script" uid="uid://bbhybl3bvg0b6" path="res://scripts/states/movement/idle_state.gd" id="5_4l86x"]
[ext_resource type="Script" uid="uid://btj80uq43ccmt" path="res://scripts/states/movement/jump_state.gd" id="6_a47yd"]
[ext_resource type="Script" uid="uid://8ympfbj5i4hc" path="res://scripts/states/movement/fall_state.gd" id="8_4l86x"]
[ext_resource type="Script" uid="uid://dlfbk4aggn6u1" path="res://scripts/states/movement/move_state.gd" id="8_a47yd"]
[ext_resource type="Script" uid="uid://5oxt7p6a1uo8" path="res://scripts/player_input.gd" id="10_kusnb"]
[ext_resource type="PackedScene" uid="uid://btdemgg0e0b4o" path="res://scenes/player/player_ui.tscn" id="12_ua4at"]
[ext_resource type="PackedScene" uid="uid://cf6jco7ctb45m" path="res://weapons_manager.tscn" id="13_nrabn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_y8poy"]

[node name="PlayerRootMotion" type="CharacterBody3D" node_paths=PackedStringArray("_player_input", "_camera_input", "_player_model", "_state_machine", "skeleton", "bones")]
script = ExtResource("1_u2qrv")
_player_input = NodePath("PlayerInput")
_camera_input = NodePath("CameraInput")
_player_model = NodePath("x_bot")
_state_machine = NodePath("RewindableStateMachine")
skeleton = NodePath("x_bot/Armature/GeneralSkeleton")
bones = NodePath("x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D")

[node name="x_bot" parent="." instance=ExtResource("2_xfltk")]

[node name="GeneralSkeleton" parent="x_bot/Armature" index="0"]
bones/1/position = Vector3(-3.55271e-14, 1.0427, -2.32831e-08)
bones/1/rotation = Quaternion(1.82322e-07, 2.23274e-08, -9.84778e-07, 1)
bones/2/rotation = Quaternion(-1.39698e-09, -2.23269e-08, 7.34268e-07, 1)
bones/3/rotation = Quaternion(1.11967e-20, 3.91909e-14, -6.77902e-13, 1)
bones/4/rotation = Quaternion(-7.45058e-09, -7.91034e-16, -1.05471e-14, 1)
bones/5/rotation = Quaternion(3.72529e-09, -4.44089e-14, -2.29039e-13, 1)
bones/6/rotation = Quaternion(-3.17637e-22, -8.88178e-16, 1.43219e-14, 1)
bones/8/rotation = Quaternion(0.5, -0.5, -0.5, -0.5)
bones/9/rotation = Quaternion(-2.08616e-07, 1, -8.9407e-08, -5.0664e-07)
bones/10/rotation = Quaternion(-4.21468e-08, 0.707107, -4.21468e-08, 0.707107)
bones/11/rotation = Quaternion(-1.96582e-07, -0.707105, 3.65169e-07, 0.707109)
bones/12/rotation = Quaternion(-0.210382, -0.677397, -0.209507, 0.673037)
bones/13/rotation = Quaternion(-0.00857145, 0.00425966, 0.000481129, 0.999954)
bones/14/rotation = Quaternion(-0.00636509, 0.00315905, 0.0003995, 0.999975)
bones/15/scale = Vector3(1.00058, 1.00049, 1.00015)
bones/16/rotation = Quaternion(8.9407e-07, 5.96046e-08, 0.000164017, 1)
bones/17/rotation = Quaternion(-8.9407e-08, -2.98023e-08, -0.000255644, 1)
bones/18/rotation = Quaternion(-4.47035e-08, 5.96046e-08, 8.80808e-05, 1)
bones/20/rotation = Quaternion(9.23872e-07, 2.98023e-08, 0.000501722, 1)
bones/21/rotation = Quaternion(-8.9407e-08, 2.98023e-08, -0.000850022, 1)
bones/22/rotation = Quaternion(-2.98023e-08, -2.98023e-08, 0.000322014, 1)
bones/24/rotation = Quaternion(-2.98023e-08, 2.98023e-08, -0.000156373, 1)
bones/25/rotation = Quaternion(-2.98023e-08, 2.98023e-08, 0.000221595, 1)
bones/26/rotation = Quaternion(0, 0, 0.000112653, 1)
bones/28/rotation = Quaternion(-4.55976e-06, 1.49012e-08, -0.000520244, 1)
bones/29/rotation = Quaternion(1.49012e-07, -2.98023e-08, -0.000846416, 1)
bones/30/rotation = Quaternion(1.49012e-08, 8.9407e-08, 0.000496611, 1)
bones/32/rotation = Quaternion(0.5, 0.5, 0.5, -0.5)
bones/33/rotation = Quaternion(-8.79168e-07, 1, 9.98378e-07, -2.98023e-08)
bones/34/rotation = Quaternion(-4.21468e-08, -0.707107, 8.42937e-08, 0.707107)
bones/35/rotation = Quaternion(5.45042e-07, 0.707107, 5.45042e-07, 0.707107)
bones/36/rotation = Quaternion(-0.210905, 0.676919, 0.210144, 0.673156)
bones/37/rotation = Quaternion(-0.00757469, -0.00376609, -0.000403136, 0.999964)
bones/38/rotation = Quaternion(-0.00560211, -0.00278677, -0.000284195, 0.99998)
bones/39/scale = Vector3(1.00058, 1.00049, 1.00015)
bones/40/rotation = Quaternion(-8.34465e-07, 1.3411e-07, 4.45694e-05, 1)
bones/41/rotation = Quaternion(-1.04308e-07, -5.96046e-08, -0.00010477, 1)
bones/42/rotation = Quaternion(2.98023e-08, -2.98023e-08, 6.63102e-05, 1)
bones/44/rotation = Quaternion(0, 5.96046e-08, 3.14116e-05, 1)
bones/45/rotation = Quaternion(-4.47035e-08, 0, -2.09659e-05, 1)
bones/46/rotation = Quaternion(1.49012e-08, 8.9407e-08, -2.09212e-05, 1)
bones/48/rotation = Quaternion(-8.19564e-07, 5.96046e-08, -6.12438e-06, 1)
bones/49/rotation = Quaternion(2.98023e-08, -2.98023e-08, 2.98023e-08, 1)
bones/50/rotation = Quaternion(0, 5.96046e-08, -1.19209e-07, 1)
bones/52/rotation = Quaternion(5.1409e-06, 1.19209e-07, -0.00204465, 0.999998)
bones/53/rotation = Quaternion(-7.7486e-07, -5.96046e-08, 0.000210404, 1)
bones/54/rotation = Quaternion(8.9407e-08, 1.49012e-08, 6.69211e-05, 1)
bones/56/rotation = Quaternion(-2.26045e-08, 0.000672017, 1, -6.98541e-07)
bones/57/rotation = Quaternion(2.75893e-10, 0.999999, -0.00134145, -5.66826e-10)
bones/58/rotation = Quaternion(-1.11124e-08, 0.706633, -0.70758, 1.28085e-08)
bones/59/rotation = Quaternion(6.52983e-11, 1, 2.98023e-08, 3.71547e-12)
bones/61/rotation = Quaternion(-2.27273e-08, 0.000650286, 1, -7.08998e-07)
bones/62/rotation = Quaternion(-9.88683e-10, 0.999999, -0.00129878, 1.41577e-08)
bones/63/rotation = Quaternion(-1.10569e-08, 0.706648, -0.707565, 1.30782e-08)
bones/64/rotation = Quaternion(1.17033e-10, 1, 0, 9.26995e-10)

[node name="Physical Bone Root" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="0"]
transform = Transform3D(-1, 4.97099e-06, 7.40968e-08, 0, 0.0149042, -0.999889, -4.97154e-06, -0.999889, -0.0149042, -3.86365e-08, 0.521374, 0.00777153)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.4869e-14, 5.58794e-09, 0.521432)
body_offset = Transform3D(-1, 4.97099e-06, 7.40968e-08, 0, 0.0149042, -0.999889, -4.97154e-06, -0.999889, -0.0149042, -3.86365e-08, 0.521374, 0.00777153)

[node name="Physical Bone Hips" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="1"]
transform = Transform3D(-1, 3.89891e-05, -1.48841e-06, 1.99192e-06, 0.0129173, -0.999917, -3.89666e-05, -0.999917, -0.0129173, 7.0498e-08, 1.09361, 0.000657569)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.28683e-09, -8.28295e-08, 0.0509144)
body_offset = Transform3D(-1, 3.90083e-05, 4.81554e-07, 2.23523e-08, 0.0129169, -0.999917, -3.90112e-05, -0.999917, -0.0129169, -2.98016e-08, 0.0509101, 0.000657573)

[node name="CollisionShape3D" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D/Physical Bone Hips" index="0"]
transform = Transform3D(1, 1.86265e-09, 0, 0, 1.49012e-08, 1, 0, -1, 0, 0, 0, 0)

[node name="Physical Bone Spine" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="2"]
transform = Transform3D(1, 7.69532e-08, -5.17685e-07, -5.23373e-07, 0.147032, -0.989132, -8.60739e-13, 0.989132, 0.147032, 1.59459e-07, 1.19399, -0.00603906)
joint_type = 3
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.60069e-08, 6.28643e-07, 0.0500141)
body_offset = Transform3D(1, 3.28643e-09, -2.21089e-08, -2.23517e-08, 0.147032, -0.989132, -1.6263e-19, 0.989132, 0.147032, -1.49012e-08, 0.0494704, -0.00735429)
joint_constraints/angular_limit_enabled = false
joint_constraints/angular_limit_upper = 90.0
joint_constraints/angular_limit_lower = -90.0
joint_constraints/angular_limit_bias = 0.3
joint_constraints/angular_limit_softness = 0.9
joint_constraints/angular_limit_relaxation = 1.0

[node name="Physical Bone Chest" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="3"]
transform = Transform3D(1, -3.00888e-07, -4.08138e-07, -3.59462e-07, 0.147032, -0.989132, 3.57627e-07, 0.989132, 0.147032, 1.99791e-07, 1.28957, -0.0202446)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.82755e-08, -9.66713e-07, 0.0466139)
body_offset = Transform3D(1, -3.74555e-07, 8.74398e-08, 1.41561e-07, 0.147032, -0.989132, 3.57628e-07, 0.989132, 0.147032, -2.23517e-08, 0.0461074, -0.00685278)

[node name="Physical Bone UpperChest" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="4"]
transform = Transform3D(1, -6.43347e-07, -5.08446e-07, -4.26517e-07, 0.121494, -0.992592, 7.00354e-07, 0.992592, 0.121494, 3.87662e-07, 1.41937, -0.0373433)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.96439e-08, -2.51457e-08, 0.0843263)
body_offset = Transform3D(1, -7.04219e-07, -1.11351e-08, 7.45058e-08, 0.121494, -0.992592, 7.00355e-07, 0.992592, 0.121494, 1.00583e-07, 0.0837016, -0.0102451)

[node name="Physical Bone Neck" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="5"]
transform = Transform3D(-1, -3.64225e-08, -7.41957e-07, 7.2454e-07, 0.172567, -0.984998, 1.63914e-07, -0.984998, -0.172567, 4.08116e-07, 1.55116, -0.0391631)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.07116e-08, 9.18284e-07, 0.0488191)
body_offset = Transform3D(-1, -1.22882e-07, -2.4845e-07, 2.23517e-07, 0.172567, -0.984998, 1.63913e-07, -0.984998, -0.172567, 4.28408e-08, 0.0480865, 0.00842547)

[node name="Physical Bone Head" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="6"]
transform = Transform3D(-1, -3.42269e-10, -7.85155e-07, 7.43167e-07, 0.322225, -0.946663, 2.53321e-07, -0.946663, -0.322225, 2.70408e-07, 1.70944, 0.00676559)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.14996e-07, -1.34483e-06, 0.116395)
body_offset = Transform3D(-1, -1.61784e-07, -3.10855e-07, 2.42144e-07, 0.322225, -0.946663, 2.5332e-07, -0.946663, -0.322225, -1.78814e-07, 0.110187, 0.037504)

[node name="Physical Bone RightShoulder" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="7"]
transform = Transform3D(1.19405e-06, -0.211563, 0.977364, 0.973454, 0.223702, 0.0484219, -0.228883, 0.951419, 0.205947, -0.0986636, 1.44309, -0.0598643)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.96816e-05, 1.96606e-05, 0.0541951)
body_offset = Transform3D(0.228883, -0.951419, -0.205947, -2.42144e-07, 0.211563, -0.977364, 0.973454, 0.223702, 0.048423, 0.0111572, 0.0529642, -0.00272572)

[node name="Physical Bone RightUpperArm" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="8"]
transform = Transform3D(1.78815e-07, -1.20138e-06, 1, 3.53406e-07, -1, -1.20138e-06, 1, 3.53407e-07, -1.78815e-07, -0.290836, 1.44057, -0.0710225)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.53917e-06, -2.20177e-06, 0.139208)
body_offset = Transform3D(1, -3.12925e-07, 2.38418e-07, 2.38419e-07, 4.02331e-07, -1, 3.12924e-07, 1, 4.02332e-07, 5.50598e-06, 0.139208, 2.14577e-06)

[node name="Physical Bone RightLowerArm" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="9"]
transform = Transform3D(1.42489e-06, 6.55653e-07, 1, 1, 2.19295e-07, -1.42489e-06, -2.19296e-07, 1, -6.55652e-07, -0.571687, 1.44057, -0.0710279)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.05075e-07, 3.37709e-08, 0.141644)
body_offset = Transform3D(1, -5.66244e-07, -5.06639e-07, -5.0664e-07, -2.38419e-07, -1, 5.66244e-07, 1, -2.38419e-07, 4.76837e-07, 0.141644, 0)

[node name="Physical Bone RightHand" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="10"]
transform = Transform3D(-3.97251e-07, -0.783701, 0.621139, -0.862437, 0.314398, 0.396681, -0.506164, -0.535693, -0.675893, -0.725655, 1.4327, -0.0576122)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.37837e-06, 3.03704e-06, 0.0198436)
body_offset = Transform3D(-0.506169, -0.535691, -0.675891, 1.86296e-09, 0.783701, -0.621138, 0.862434, -0.314401, -0.396685, 0.0134155, 0.0123233, 0.00786972)

[node name="Physical Bone LeftShoulder" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="11"]
transform = Transform3D(-5.48465e-07, 0.21157, -0.977363, -0.973476, 0.223611, 0.0484057, 0.22879, 0.951439, 0.205958, 0.0986666, 1.44329, -0.0598668)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.81928e-05, -2.31043e-05, 0.0541835)
body_offset = Transform3D(0.22879, 0.951439, 0.205958, 1.71363e-07, 0.21157, -0.977363, -0.973476, 0.223611, 0.0484049, -0.01116, 0.0529618, -0.00252199)

[node name="Physical Bone LeftUpperArm" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="12"]
transform = Transform3D(-6.70552e-07, 7.50676e-07, -1, -8.33968e-07, -1, -7.50675e-07, -1, 8.33967e-07, 6.70553e-07, 0.290836, 1.44057, -0.0710288)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.47474e-07, 4.28157e-07, 0.139208)
body_offset = Transform3D(1, -7.63684e-07, 1.08778e-06, 1.08778e-06, -5.0664e-07, -1, 7.63684e-07, 1, -5.06639e-07, 5.96046e-07, 0.139208, -3.57628e-07)

[node name="Physical Bone LeftLowerArm" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="13"]
transform = Transform3D(-5.15924e-07, 1.2815e-06, -1, -1, 5.2477e-07, 5.15925e-07, 5.24771e-07, 1, 1.2815e-06, 0.571688, 1.44057, -0.0710282)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.00341e-07, -1.7932e-07, 0.141644)
body_offset = Transform3D(1, -3.35277e-07, -1.95205e-06, -1.95205e-06, -4.17232e-07, -1, 3.35276e-07, 1, -4.17233e-07, 4.76837e-07, 0.141644, 2.38419e-07)

[node name="Physical Bone LeftHand" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="14"]
transform = Transform3D(-1.1585e-06, 0.783609, -0.621254, 0.862117, 0.314796, 0.397061, 0.506709, -0.535593, -0.675563, 0.725663, 1.43269, -0.0576231)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.59816e-06, -4.04567e-06, 0.0198438)
body_offset = Transform3D(-0.506709, 0.535593, 0.675564, -3.97904e-13, 0.78361, -0.621253, -0.862117, -0.314795, -0.397062, -0.0134054, 0.0123312, 0.00787485)

[node name="Physical Bone RightUpperLeg" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="15"]
transform = Transform3D(1, 5.9226e-07, 5.78941e-07, -5.73504e-07, -0.00913964, 0.999958, 5.97527e-07, -0.999958, -0.00913964, -0.0820781, 0.75334, -0.0139671)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.00267e-09, 8.66363e-07, 0.221858)
body_offset = Transform3D(-1, -5.97877e-07, -6.52397e-09, 1.86267e-09, 0.00779602, -0.99997, 5.97909e-07, -0.99997, -0.00779602, 7.45058e-09, 0.221851, 0.00173047)

[node name="Physical Bone RightLowerLeg" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="16"]
transform = Transform3D(-1, -1.64684e-07, 5.28516e-07, 5.38707e-07, -0.0696838, 0.997569, -1.27455e-07, 0.997569, 0.0696838, -0.0820783, 0.309371, -0.0274554)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.47259e-08, -5.88596e-07, 0.222663)
body_offset = Transform3D(-1, -1.24009e-07, -4.3035e-08, 3.44588e-08, 0.0683478, -0.997662, 1.2666e-07, -0.997662, -0.0683478, 1.04308e-07, 0.222142, 0.0152179)

[node name="Physical Bone RightFoot" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="17"]
transform = Transform3D(-1, 1.06189e-06, 4.59524e-07, 1.11346e-06, 0.775196, 0.631721, 3.14597e-07, 0.631721, -0.775196, -0.0820848, 0.0436565, 0.0105822)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.26059e-06, -6.18398e-07, 0.069082)
body_offset = Transform3D(1, -5.90426e-07, -7.74771e-08, 3.12924e-07, 0.631721, -0.775196, 5.06639e-07, 0.775196, 0.631721, 6.26594e-06, 0.0535524, -0.0436401)

[node name="Physical Bone LeftUpperLeg" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="18"]
transform = Transform3D(1, 3.28894e-06, 2.06588e-07, -1.76586e-07, -0.00911951, 0.999958, 3.29069e-06, -0.999958, -0.00911951, 0.0820775, 0.753339, -0.0139712)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1808e-07, 1.14786e-06, 0.221858)
body_offset = Transform3D(-1, -3.29409e-06, 3.44919e-07, -3.70666e-07, 0.00781936, -0.99997, 3.29129e-06, -0.999969, -0.00781935, 1.41561e-07, 0.221851, 0.00173593)

[node name="Physical Bone LeftLowerLeg" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="19"]
transform = Transform3D(-1, -1.35158e-07, 4.7067e-07, 4.78942e-07, -0.0696678, 0.99757, -1.02039e-07, 0.99757, 0.0696678, 0.0820774, 0.309395, -0.0274605)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.26076e-08, 7.48783e-07, 0.222638)
body_offset = Transform3D(-1, -1.25241e-07, -7.953e-08, 7.07807e-08, 0.0683736, -0.99766, 1.30385e-07, -0.99766, -0.0683736, -1.49012e-08, 0.222117, 0.0152233)

[node name="Physical Bone LeftFoot" parent="x_bot/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="20"]
transform = Transform3D(-1, 1.025e-06, 4.8733e-07, 1.10243e-06, 0.775196, 0.631721, 2.69737e-07, 0.631721, -0.775196, 0.0820837, 0.0436552, 0.0105834)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.43972e-06, -9.12696e-07, 0.0690821)
body_offset = Transform3D(1, -5.52744e-07, -1.42882e-07, 2.38419e-07, 0.631721, -0.775196, 5.18747e-07, 0.775196, 0.631721, -6.42985e-06, 0.0535527, -0.0436399)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_y8poy")

[node name="RollbackSynchronizer" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("2_ktqdq")
root = NodePath("..")
state_properties = Array[String](["RewindableStateMachine:state", ":transform", ":velocity", "x_bot:transform"])
input_properties = Array[String](["PlayerInput:input_dir", "PlayerInput:jump_input", "PlayerInput:run_input", "CameraInput:camera_basis", "PlayerInput:fire_input", "PlayerInput:interact_input", "PlayerInput:switch_up_input", "PlayerInput:switch_down_input"])
metadata/_custom_type_script = ExtResource("2_ktqdq")

[node name="TickInterpolator" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("4_a47yd")
root = NodePath("..")
properties = Array[String]([":transform", "x_bot:transform"])
metadata/_custom_type_script = ExtResource("4_a47yd")

[node name="RewindableStateMachine" type="Node" parent="."]
script = ExtResource("3_lo6j0")
metadata/_custom_type_script = ExtResource("3_lo6j0")

[node name="IdleState" type="Node" parent="RewindableStateMachine" node_paths=PackedStringArray("camera_input", "player_model", "player_input", "parent")]
script = ExtResource("5_4l86x")
animation_name = "rifle aiming idle"
camera_input = NodePath("../../CameraInput")
player_model = NodePath("../../x_bot")
player_input = NodePath("../../PlayerInput")
parent = NodePath("../..")

[node name="JumpState" type="Node" parent="RewindableStateMachine" node_paths=PackedStringArray("camera_input", "player_model", "player_input", "parent")]
script = ExtResource("6_a47yd")
animation_name = "strafe (2)"
camera_input = NodePath("../../CameraInput")
player_model = NodePath("../../x_bot")
player_input = NodePath("../../PlayerInput")
parent = NodePath("../..")

[node name="MoveState" type="Node" parent="RewindableStateMachine" node_paths=PackedStringArray("camera_input", "player_model", "player_input", "parent")]
script = ExtResource("8_a47yd")
animation_name = "rifle run"
camera_input = NodePath("../../CameraInput")
player_model = NodePath("../../x_bot")
player_input = NodePath("../../PlayerInput")
parent = NodePath("../..")

[node name="FallState" type="Node" parent="RewindableStateMachine" node_paths=PackedStringArray("camera_input", "player_model", "player_input", "parent")]
script = ExtResource("8_4l86x")
animation_name = "strafe"
camera_input = NodePath("../../CameraInput")
player_model = NodePath("../../x_bot")
player_input = NodePath("../../PlayerInput")
parent = NodePath("../..")

[node name="CameraInput" parent="." node_paths=PackedStringArray("rollback_synchronizer") instance=ExtResource("4_g37aj")]
rollback_synchronizer = NodePath("../RollbackSynchronizer")

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("10_kusnb")

[node name="PlayerUi" parent="." instance=ExtResource("12_ua4at")]

[node name="RightHandBoneAttachment" type="BoneAttachment3D" parent="."]
transform = Transform3D(-3.77197e-07, -1, -6.79836e-07, 6.26917e-06, 6.79834e-07, -1, 1, -3.77201e-07, 6.26917e-06, -0.713331, 1.44057, -0.0710277)
bone_name = "RightHand"
bone_idx = 11
use_external_skeleton = true
external_skeleton = NodePath("../x_bot/Armature/GeneralSkeleton")

[node name="WeaponsManager" parent="RightHandBoneAttachment" node_paths=PackedStringArray("player") instance=ExtResource("13_nrabn")]
transform = Transform3D(-6.21658e-08, 1, -1.11759e-07, -2.23517e-08, 3.72529e-08, -1, -1, -6.63567e-09, -1.11759e-08, 0.374843, -0.0741678, 0.265788)
player = NodePath("../..")

[node name="blasterP2" parent="RightHandBoneAttachment/WeaponsManager/Weapons_Models" index="4"]
transform = Transform3D(-0.97237, -0.233408, -0.00407487, 0, 0.0174555, -0.999848, 0.233443, -0.972222, -0.0169732, 0.32, 1.014, -0.35)

[editable path="x_bot"]
[editable path="RightHandBoneAttachment/WeaponsManager"]
